# clang-guess-format

./: .gitignore  CMakeLists.txt  ClangGuessFormat.cpp  LICENSE.txt  Makefile  README.md
scripts/: 3.9.1.json  clang_guess_format.py
